--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "frontend",
+  "name": "backpacking",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://neowu1216.github.io/backpacking",
   "dependencies": {
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-scripts": "2.1.5"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -21,5 +24,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
