Blog deletion and creation with redux and persist state

--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "homepage": "http://neowu1216.github.io/backpacking",
   "dependencies": {
+    "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-router-dom": "^4.4.0",
     "react-scripts": "2.1.5",
+    "redux-persist": "^5.10.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.86.0"
   },
@@ -30,6 +32,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "gh-pages": "^2.0.1"
+    "gh-pages": "^2.0.1",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1"
   }
 }
