--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "normalize.css": "^8.0.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-redux": "^6.0.1",
     "react-router-dom": "^4.4.0",
     "react-scripts": "2.1.5",
+    "react-textarea-autosize": "^7.1.0",
+    "redux": "^4.0.1",
     "redux-persist": "^5.10.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.86.0",
-    "react-redux": "^6.0.1",
-    "redux": "^4.0.1"
+    "semantic-ui-react": "^0.86.0"
   },
   "scripts": {
     "predeploy": "npm run build",
