--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "normalize.css": "^8.0.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.0.4",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.4.0",
     "react-scripts": "2.1.5",
